--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Starter Home Gym</title>
 </head>
 <body>
+    <h2>Gym Equipment</h2>
+
+    <ul>
+        <li>
+            <h3>Kettlebell</h3>
+            <div>ID: 1</div>
+        </li>
+        <li>
+            <h3>Kettlebell</h3>
+            <div>ID: 2</div>
+        </li>
+        <li>
+            <h3>Kettlebell</h3>
+            <div>ID: 3</div>
+        </li>
+        <li>
+            <h3>Kettlebell</h3>
+            <div>ID: 4</div>
+        </li>
+        <li>
+            <h3>Kettlebell</h3>
+            <div>ID: 5</div>
+        </li>
+    </ul>
     <script src='index.js'></script>
 </body>
 </html>
